org.mmisw.orrclient - ORR Client Library
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13
$Id$

2010-09-06    2.0.2.beta
	- some doc
	- removed deprecated/unused class OrrClientConfig.

2010-09-04    2.0.2.beta
	- Renamings:
		- Module at svn renamed to org.mmisw.orrclient (formerly org.mmisw.iserver).
		- Packages org.mmisw.iserver{.**} --> org.mmisw.orrclient{.**}
		- org.mmisw.iserver.gwt.IServer.gwt.xml --> org.mmisw.orrclient.gwt.OrrClient.gwt.xml
		- org.mmisw.orrclient.core.IServer --> org.mmisw.orrclient.IOrrClient
		- org.mmisw.orrclient.core.ServerConfig --> org.mmisw.orrclient.OrrClientConfig
		- org.mmisw.orrclient.core.Server --> org.mmisw.orrclient.core.OrrClientImpl
		
	- Updated
		- templ-pom.xml artifactId: orrclient
		- version.properties: version property is now orrclient.version
		- build.xml
	
	The "exported" types, ie., public for clients of the library, are:
	- org.mmisw.orrclient.OrrClientConfiguration -- allows to configure the library
	- org.mmisw.orrclient.IOrrClient.Manager -- initializes the library
	- org.mmisw.orrclient.IOrrClient -- main interface to the library
	- and all types in packages org.mmisw.orrclient.gwt.**  -- types handled by the library
	
		
2010-08-27   2.0.0.beta

	Fixed 276: "original SKOS namespace not retained in new version"
	- Vine mappings: allowing to maintain the original SKOS namespace when editing a new version
	  of a mapping ontology. That is, if a version of a mapping ontology uses the SKOS
	  namespace "http://www.w3.org/2008/05/skos#", then any modification/addition of mappings
	  for a new version will continue to use that namespace.
	
	- IServer/Server: getVineRelationInfos renamed to getDefaultVineRelationInfos.
	  getDefaultVineRelationInfos is to be used when creating a brand new mapping ontology.
	  The SKOS namespace in this case is always "http://www.w3.org/2004/02/skos/core#" (which
	  is the preferred "official" SKOS (core) namespace).
	  