@@ -1,17 +1,13 @@
 package org.mmisw.orrclient.core;
 
 
-import java.io.IOException;
-
 import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.httpclient.HttpException;
 import org.apache.commons.httpclient.HttpStatus;
 import org.apache.commons.httpclient.NameValuePair;
 import org.apache.commons.httpclient.methods.PostMethod;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.mmisw.orrclient.IOrrClient;
-import org.mmisw.orrclient.OrrClientConfiguration;
+import org.mmisw.orrclient.core.util.OntServiceUtil;
 import org.mmisw.orrclient.core.util.XmlAccessor;
 import org.mmisw.orrclient.gwt.client.rpc.LoginResult;
 
@@ -41,18 +37,14 @@ class UserAuthenticator {
 		this.userPassword = userPassword;
 	}
 	
-	private static OrrClientConfiguration _config() {
-		OrrClientConfiguration config = IOrrClient.Manager.getOrrClient().getConfiguration();
-		return config;
-	}
-	
-	/** makes the request and return the response from the server */
-	private String authenticate() throws HttpException, IOException {
+	/** makes the request and return the response from the server 
+	 * @throws Exception */
+	private String authenticate() throws Exception {
 		String applicationid = "4ea81d74-8960-4525-810b-fa1baab576ff";
 		log.info("authenticating username=" +userName+ " password=" +userPassword.replaceAll(".", "*"));
 		log.info("applicationid=" +applicationid);
 		
-		String bioPortalRestUrl = _config().getBioportalRestUrl();
+		String bioPortalRestUrl = OntServiceUtil.getAquaportalRestUrl();
 		String authRestUrl = bioPortalRestUrl + AUTH;
 		log.info("authentication REST URL =" +authRestUrl);
 		
